# contributor-stats

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  github-stats-state.json  github_stats.py  gource-captions.txt  gource-output.sh  main.py  pyproject.toml
.github/workflows/: build.yml  codeql.yml  update-contributions.yml
src/contributor-stats/: main.py
src/contributor_stats/: fork_analysis.py  github_stats.py  gitstats.py  main.py
tests/: test_github.py
video/: gource-captions.txt  gource-output.sh  issue-history-export.py
