[tool.poetry]
name = "contributor-stats"
version = "0.1.0"
description = "Generates statistics for contributors from git history and GitHub activity."
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2"
PyGithub = "*"
numpy = "^1.26"
tqdm = "*"
click = "^8.0"
joblib = "^1.3"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "^1.8"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
